# pywindnd

./: .gitignore  .pdm.toml  README.md  main.py  pyproject.toml  setup.cfg  setup.py
windnd/: __init__.py  windnd.py
